# windeurope72hours-elevations-api

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  gcloud-deploy.yml
elevations_api/: main.py  requirements.txt
terraform/: iam.tf  main.tf
tests/: test_main.py
