[tool.poetry]
name = "windeurope72-elevations-api"
version = "0.1.8"
description = ""
authors = ["Marcus Lugg <marcus@octue.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "elevations_api"}]

[tool.poetry.dependencies]
python = "^3.10"
functions-framework = "^3.3.0"
octue = "^0.46.0"
neo4j = "^5.7.0"
cachetools = "^5.3.0"
h3 = "^3.7.6"
flask = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
